# Real-Estate-Search-Engine

./: README.md  docker-compose.yml
backend/: .dockerignore  CMakeLists.txt  Dockerfile
backend/data/: generate_data.py
backend/src/: main.cpp
frontend/: .dockerignore  .env.production  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  InteractiveMap.tsx  index.css
